[gd_scene load_steps=2 format=2]

[ext_resource path="res://Link.gd" type="Script" id=1]

[node name="Link" type="Node2D"]
position = Vector2( 5.65686, 13.0815 )
script = ExtResource( 1 )

[node name="Line1" type="ColorRect" parent="."]
margin_top = -0.0441933
margin_right = 24.0
margin_bottom = 3.95581
color = Color( 0.133333, 0.690196, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="ColorRect" parent="."]
margin_top = 6.20971
margin_right = 24.0
margin_bottom = 10.2097
color = Color( 0.0627451, 0.811765, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="ColorRect" parent="."]
margin_top = 12.4524
margin_right = 24.0
margin_bottom = 16.4524
color = Color( 0.0392157, 0.764706, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug" type="Label" parent="."]
visible = false
margin_right = 24.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}
